--- a/manager/app/templates/details.html
+++ b/manager/app/templates/details.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class='col'>
 					<a href="{{ url_for('log', device_name=device['name']) }}" 
-						class="btn btn-primary" role='button'>Log</a>
+						class="btn btn-primary" role='button'>Audit Logs</a>
 				</div>
 			</div>
 		</div>
