--- a/manager/app/templates/base.html
+++ b/manager/app/templates/base.html
@@ -4,7 +4,7 @@
 
 {% block navbar %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">{{ session['username'] }}</a>
+  <p class="navbar-brand" >{{ session['username'] }}</p>
 
   
 	<form class="form-inline my-2 my-lg-0 right" action="{{url_for('logout')}}" method="get">
