--- a/manager/app/templates/new_policy.html
+++ b/manager/app/templates/new_policy.html
@@ -25,6 +25,14 @@
 							<dd>
 								<input type="checkbox" class="form-check-input" name="write">
 							</dd>
+							<dt>Ownership Rights</dt>
+							<dd>
+								<input type="checkbox" class="form-check-input" name="own">
+							</dd>
+							<dt>Access Duration (in seconds)</dt>
+							<dd>
+								<input type="text" class="form-control" name="access_time">
+							</dd>
 							<dt><button type="submit" class="btn btn-primary">Submit</button>
   							</dt><dd></dd>
 						</form>
