--- a/manager/app/templates/devices.html
+++ b/manager/app/templates/devices.html
@@ -6,7 +6,7 @@
 			<div class='row'>
 				<div class='col'>
 					<a href="{{ url_for('new_device', device_name=key) }}" 
-						class="btn btn-primary" role='button'>Add Device</a>
+						class="btn btn-primary" role='button'>Register Device</a>
 				</div>
 			</div>
 			<div class='row'>
